<resources>
    <string name="app_name">Country Search</string>
    <string name="title_home">Home</string>
    <string name="title_countries">Countries</string>
    <string name="title_favorites">Favorites</string>
    <string name="country_flag">country_flag</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="country_database">country-database</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="explain_qrCode">Share your favorite countries with others using QR codes!</string>
</resources>